@@ -2,6 +2,9 @@ New in spot 2.9.6.dev  (not yet released)
 
   Nothing yet.
 
+  - Some formulas using ->, <->, or xor were not properly detected as
+    purely universal or pure eventualities.
+
 New in spot 2.9.6 (2021-01-18)
 
   Build:
